Fix link to KIND, we should have used ID as key for owners

--- a/navtelemator/templates/telemator/owner_info.html
+++ b/navtelemator/templates/telemator/owner_info.html
@@ -22,7 +22,7 @@
       </tr>
     <tr>
         <th>KIND</th>
-        <td><a href="https://kind.cs.uninett.no/org/edit_org.html?id={{owner.Owner}};">Link</a> </td>
+        <td><a href="https://kind.uninett.no/soek.html?table=org&skjema=org&navn={{ owner.Name }}&navn_inc=1;">Link</a> </td>
     </tr>
 </table>
 
