--- a/navtelemator/templates/telemator/owner_info.html
+++ b/navtelemator/templates/telemator/owner_info.html
@@ -24,7 +24,7 @@
     </tr>
     <tr>
         <th>Email</th>
-        <td>{{ owner.Email }}</td>
+        <td><a href="mailto:{{ owner.Email }}">{{ owner.Email }}</a></td>
       </tr>
 </table>
 
